{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 1017,
  "lineage": "cba4f07e-4be3-31ae-4ec0-15d41b82c45a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:route-table/rtb-0e5301dc8e09015f5",
            "default_route_table_id": "rtb-0e5301dc8e09015f5",
            "id": "rtb-0e5301dc8e09015f5",
            "owner_id": "779173289057",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c1c8586ebd734da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main RT"
            },
            "tags_all": {
              "Name": "Main RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main-igw",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:internet-gateway/igw-01c1c8586ebd734da",
            "id": "igw-01c1c8586ebd734da",
            "owner_id": "779173289057",
            "tags": {
              "Name": "Main IGW"
            },
            "tags_all": {
              "Name": "Main IGW"
            },
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "controlplane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:security-group/sg-085915ccab5f83c68",
            "description": "K8S Controlplane Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085915ccab5f83c68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "K8S 10250",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "K8S 10257",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "K8S 10259",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "K8S 2379-2380",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "K8S 6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6443
              }
            ],
            "name": "K8S Controlplane SG",
            "name_prefix": "",
            "owner_id": "779173289057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8S Controlplane SG"
            },
            "tags_all": {
              "Name": "K8S Controlplane SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:security-group/sg-01ad085f77f646fc1",
            "description": "K8S Worker Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ad085f77f646fc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "K8S 10250",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "K8S 30000-32767",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 32767
              }
            ],
            "name": "K8S Worker SG",
            "name_prefix": "",
            "owner_id": "779173289057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8S Worker SG"
            },
            "tags_all": {
              "Name": "K8S Worker SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "controlplane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All outbound",
            "from_port": 0,
            "id": "sgrule-2450411503",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-07aee5e7f075823d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "worker",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All outbound",
            "from_port": 0,
            "id": "sgrule-3873137526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01ad085f77f646fc1",
            "security_group_rule_id": "sgr-02fe81d30bca183bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_controlplane_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 6443",
            "from_port": 6443,
            "id": "sgrule-1982728382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-0fefd19760e45dbff",
            "self": false,
            "source_security_group_id": "sg-085915ccab5f83c68",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 2379-2380",
            "from_port": 2379,
            "id": "sgrule-4018227740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-067b045d6a37af902",
            "self": false,
            "source_security_group_id": "sg-085915ccab5f83c68",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "rule3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 10250",
            "from_port": 10250,
            "id": "sgrule-3964967681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-0ee941aadf03c85e3",
            "self": false,
            "source_security_group_id": "sg-085915ccab5f83c68",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "rule4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 10259",
            "from_port": 10259,
            "id": "sgrule-2703642339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-0b45d109d682aa498",
            "self": false,
            "source_security_group_id": "sg-085915ccab5f83c68",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "rule5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 10257",
            "from_port": 10257,
            "id": "sgrule-1638541920",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-0474f0564fee3dc6b",
            "self": false,
            "source_security_group_id": "sg-085915ccab5f83c68",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_worker_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 10250",
            "from_port": 10250,
            "id": "sgrule-2042737671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ad085f77f646fc1",
            "security_group_rule_id": "sgr-0307ae79a365befb0",
            "self": false,
            "source_security_group_id": "sg-01ad085f77f646fc1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "K8S 30000-32767",
            "from_port": 30000,
            "id": "sgrule-2586636686",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ad085f77f646fc1",
            "security_group_rule_id": "sgr-02abdd656e63d4b4d",
            "self": false,
            "source_security_group_id": "sg-01ad085f77f646fc1",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "controlplane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-875970259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085915ccab5f83c68",
            "security_group_rule_id": "sgr-006102b2b0ec8837e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": "worker",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1111820658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ad085f77f646fc1",
            "security_group_rule_id": "sgr-07f94a80088f8ae99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:subnet/subnet-02894f7c344c7c715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02894f7c344c7c715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779173289057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K8S Cluster subnet 1"
            },
            "tags_all": {
              "Name": "K8S Cluster subnet 1"
            },
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:subnet/subnet-0cce6095074d94310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce6095074d94310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779173289057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K8S Cluster subnet 2"
            },
            "tags_all": {
              "Name": "K8S Cluster subnet 2"
            },
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:subnet/subnet-00189f9482a1b5017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00189f9482a1b5017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779173289057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K8S Cluster subnet 3"
            },
            "tags_all": {
              "Name": "K8S Cluster subnet 3"
            },
            "vpc_id": "vpc-07e7f7dc0f4df5b95"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:779173289057:vpc/vpc-07e7f7dc0f4df5b95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee8001e3446ae799",
            "default_route_table_id": "rtb-0e5301dc8e09015f5",
            "default_security_group_id": "sg-0cac1daab5cd45f29",
            "dhcp_options_id": "dopt-0f67562498ccd344e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e7f7dc0f4df5b95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5301dc8e09015f5",
            "owner_id": "779173289057",
            "tags": {
              "Name": "K8S Cluster VPC"
            },
            "tags_all": {
              "Name": "K8S Cluster VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.node[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cac1713d99a8a58",
            "arn": "arn:aws:ec2:eu-west-2:779173289057:instance/i-021ec675b33b2b6bb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021ec675b33b2b6bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "thomas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051135c5c6714811a",
            "private_dns": "ip-10-0-0-200.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.200",
            "public_dns": "ec2-13-40-6-4.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.6.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e564e5b406995316",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02894f7c344c7c715",
            "tags": {
              "Name": "K8S Node 1"
            },
            "tags_all": {
              "Name": "K8S Node 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ad085f77f646fc1"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_subnet.cluster_subnet",
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.node[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cac1713d99a8a58",
            "arn": "arn:aws:ec2:eu-west-2:779173289057:instance/i-08e81d703f5ef7da1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e81d703f5ef7da1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "thomas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0621cf636751cd5ed",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-13-40-236-130.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.236.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd03711315eec007",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cce6095074d94310",
            "tags": {
              "Name": "K8S Node 2"
            },
            "tags_all": {
              "Name": "K8S Node 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085915ccab5f83c68"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_subnet.cluster_subnet",
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.node[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cac1713d99a8a58",
            "arn": "arn:aws:ec2:eu-west-2:779173289057:instance/i-0244a95f3c382301e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0244a95f3c382301e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "thomas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-013533af59cf9af61",
            "private_dns": "ip-10-0-2-43.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.43",
            "public_dns": "ec2-18-170-65-124.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.65.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04994377e27d002ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00189f9482a1b5017",
            "tags": {
              "Name": "K8S Node 3"
            },
            "tags_all": {
              "Name": "K8S Node 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ad085f77f646fc1"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "module.network.aws_security_group.controlplane_sg",
            "module.network.aws_security_group.worker_sg",
            "module.network.aws_subnet.cluster_subnet",
            "module.network.aws_vpc.cluster_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}